--- a/#source/common-style.scss
+++ b/#source/common-style.scss
@@ -62,7 +62,7 @@ nav, footer, header {
 
    &__header {
       position: fixed;
-      height: 90px;
+      height: 100px;
       width: 100%;
       background-color: $color-2;
       z-index: 2;
@@ -96,16 +96,15 @@ nav, footer, header {
    height: 40px;
    padding: 5px;
    background-color: $wave-2;
-   text-align: center;
    border: 1px solid $border;
    position: relative;
    display: flex;
    justify-content: center;
+   align-items:center;
+   font-size: 18px;
 
-   & span {
-      display: block;
-      width: 10px;
-      height:10px;
+   & > span {
+      font-size: 1rem;
       opacity: 1;
    }
    &:hover {
