--- a/css/index-style.css
+++ b/css/index-style.css
@@ -47,7 +47,7 @@ nav, footer, header {
 }
 .page__header {
   position: fixed;
-  height: 90px;
+  height: 100px;
   width: 100%;
   background-color: #25330F;
   z-index: 2;
@@ -86,7 +86,6 @@ nav, footer, header {
   height: 40px;
   padding: 5px;
   background-color: #DCDCDC;
-  text-align: center;
   border: 1px solid rgba(75, 40, 10, 0.8);
   position: relative;
   display: -webkit-box;
@@ -95,11 +94,13 @@ nav, footer, header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 18px;
 }
-.buttons__home span {
-  display: block;
-  width: 10px;
-  height: 10px;
+.buttons__home > span {
+  font-size: 1rem;
   opacity: 1;
 }
 .buttons__home:hover {
@@ -228,7 +229,7 @@ nav, footer, header {
 .buttons__home {
   position: relative;
   z-index: 1000;
-  width: 20em;
+  width: 13em;
   height: 3em;
   right: 2vmin;
   -webkit-transform: translateY(0px);
@@ -521,7 +522,7 @@ nav, footer, header {
   --cheeks: #f001;
   --beard: rgb(206, 204, 204);
   --mustache: #fff;
-  --suit: #a00;
+  --suit: rgb(207, 2, 2);
   --belt: #2e1905;
   --belt-buckle: gold;
   width: 50vmin;
@@ -731,7 +732,7 @@ nav, footer, header {
   left: 29%;
   width: 19%;
   height: 25%;
-  background: rgb(131, 1, 1);
+  background: rgb(187, 1, 1);
   -webkit-transform: skew(2deg);
           transform: skew(2deg);
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.1333333333)), color-stop(70%, transparent), color-stop(0, var(--belt)));
@@ -824,9 +825,9 @@ nav, footer, header {
   height: 100vh;
   padding: 0;
   margin: 0;
-  background: rgb(255, 243, 145);
-  background: -webkit-gradient(linear, left top, left bottom, from(rgb(255, 243, 145)), color-stop(59%, rgb(255, 243, 145)), color-stop(60%, rgb(115, 72, 27)), color-stop(62%, rgb(3, 3, 3)), color-stop(62%, rgb(115, 72, 27)), color-stop(66%, rgb(3, 3, 3)), color-stop(66%, rgb(115, 72, 27)), color-stop(70%, rgb(3, 3, 3)), color-stop(70%, rgb(115, 72, 27)), color-stop(75%, rgb(3, 3, 3)), color-stop(75%, rgb(115, 72, 27)), color-stop(79%, rgb(3, 3, 3)), color-stop(79%, rgb(115, 72, 27)), color-stop(84%, rgb(3, 3, 3)), color-stop(84%, rgb(115, 72, 27)), color-stop(89%, rgb(3, 3, 3)), color-stop(89%, rgb(115, 72, 27)), color-stop(95%, rgb(3, 3, 3)), color-stop(95%, rgb(115, 72, 27)), color-stop(100%, rgb(3, 3, 3)), to(rgb(115, 72, 27)));
-  background: linear-gradient(180deg, rgb(255, 243, 145) 0%, rgb(255, 243, 145) 59%, rgb(115, 72, 27) 60%, rgb(3, 3, 3) 62%, rgb(115, 72, 27) 62%, rgb(3, 3, 3) 66%, rgb(115, 72, 27) 66%, rgb(3, 3, 3) 70%, rgb(115, 72, 27) 70%, rgb(3, 3, 3) 75%, rgb(115, 72, 27) 75%, rgb(3, 3, 3) 79%, rgb(115, 72, 27) 79%, rgb(3, 3, 3) 84%, rgb(115, 72, 27) 84%, rgb(3, 3, 3) 89%, rgb(115, 72, 27) 89%, rgb(3, 3, 3) 95%, rgb(115, 72, 27) 95%, rgb(3, 3, 3) 100%, rgb(115, 72, 27) 100%);
+  background: rgb(252, 243, 176);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgb(252, 243, 176)), color-stop(59%, rgb(252, 243, 176)), color-stop(60%, rgb(115, 72, 27)), color-stop(62%, rgb(3, 3, 3)), color-stop(62%, rgb(115, 72, 27)), color-stop(66%, rgb(3, 3, 3)), color-stop(66%, rgb(115, 72, 27)), color-stop(70%, rgb(3, 3, 3)), color-stop(70%, rgb(115, 72, 27)), color-stop(75%, rgb(3, 3, 3)), color-stop(75%, rgb(115, 72, 27)), color-stop(79%, rgb(3, 3, 3)), color-stop(79%, rgb(115, 72, 27)), color-stop(84%, rgb(3, 3, 3)), color-stop(84%, rgb(115, 72, 27)), color-stop(89%, rgb(3, 3, 3)), color-stop(89%, rgb(115, 72, 27)), color-stop(95%, rgb(3, 3, 3)), color-stop(95%, rgb(115, 72, 27)), color-stop(100%, rgb(3, 3, 3)), to(rgb(115, 72, 27)));
+  background: linear-gradient(180deg, rgb(252, 243, 176) 0%, rgb(252, 243, 176) 59%, rgb(115, 72, 27) 60%, rgb(3, 3, 3) 62%, rgb(115, 72, 27) 62%, rgb(3, 3, 3) 66%, rgb(115, 72, 27) 66%, rgb(3, 3, 3) 70%, rgb(115, 72, 27) 70%, rgb(3, 3, 3) 75%, rgb(115, 72, 27) 75%, rgb(3, 3, 3) 79%, rgb(115, 72, 27) 79%, rgb(3, 3, 3) 84%, rgb(115, 72, 27) 84%, rgb(3, 3, 3) 89%, rgb(115, 72, 27) 89%, rgb(3, 3, 3) 95%, rgb(115, 72, 27) 95%, rgb(3, 3, 3) 100%, rgb(115, 72, 27) 100%);
 }
 @-webkit-keyframes toRight {
   0% {
@@ -1130,7 +1131,7 @@ nav, footer, header {
             box-shadow: 0px 4.66667px 24px 3px var(--red-light);
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1200px) and (orientation: landscape) {
   .tree {
     width: 50vmin;
     height: 50vmin;
@@ -1219,7 +1220,7 @@ nav, footer, header {
     }
   }
 }
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 992px) and (max-width: 1199px) and (orientation: landscape) {
   .tree {
     width: 50vmin;
     height: 50vmin;
@@ -1309,10 +1310,10 @@ nav, footer, header {
     left: -3vmin;
   }
 }
-@media (max-width: 991px) and (min-width: 768px) {
+@media (max-width: 991px) and (min-width: 768px) and (orientation: landscape) {
   .gift {
     top: 78vmin;
-    right: -9vmin;
+    right: 9vmin;
   }
   .tree {
     width: 126vmin;
@@ -1328,6 +1329,8 @@ nav, footer, header {
   .lightrope-tree__item:nth-child(1) {
     top: 48vmin;
     left: -2vmin;
+    width: 40px;
+    height: 40px;
   }
   .lightrope-tree__item:nth-child(2) {
     top: 51vmin;
@@ -1336,6 +1339,8 @@ nav, footer, header {
   .lightrope-tree__item:nth-child(3) {
     top: 33vmin;
     left: 6vmin;
+    width: 40px;
+    height: 40px;
   }
   .lightrope-tree__item:nth-child(4) {
     top: 29vmin;
@@ -1343,9 +1348,13 @@ nav, footer, header {
   .lightrope-tree__item:nth-child(5) {
     top: 16vmin;
     left: 4vmin;
+    width: 40px;
+    height: 40px;
   }
   .lightrope-tree__item:nth-child(6) {
     top: 28vmin;
+    width: 40px;
+    height: 40px;
   }
   .lightrope-tree__item:nth-child(7) {
     top: 44vmin;
@@ -1411,7 +1420,7 @@ nav, footer, header {
     }
   }
 }
-@media (max-width: 767px) and (min-width: 650px) {
+@media (max-width: 767px) and (min-width: 651px) {
   .tree {
     width: 50vmin;
     height: 50vmin;
@@ -1528,7 +1537,7 @@ nav, footer, header {
     }
   }
 }
-@media (max-width: 650px) and (min-width: 481px) {
+@media (max-width: 650px) and (min-width: 481px) and (orientation: portrait) {
   .tree {
     width: 50vmin;
     height: 50vmin;
@@ -1572,8 +1581,8 @@ nav, footer, header {
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(500px) rotate(360deg);
-              transform: translateY(500px) rotate(360deg);
+      -webkit-transform: translateY(400px) rotate(360deg);
+              transform: translateY(400px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
@@ -1600,8 +1609,8 @@ nav, footer, header {
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(500px) rotate(360deg);
-              transform: translateY(500px) rotate(360deg);
+      -webkit-transform: translateY(400px) rotate(360deg);
+              transform: translateY(400px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
@@ -1640,116 +1649,9 @@ nav, footer, header {
     left: 9vmin;
     top: 12vmin;
   }
-}
-@media (max-width: 650px) and (min-width: 300px) and (min-height: 747px) {
-  .tree {
-    width: 50vmin;
-    height: 50vmin;
-    position: absolute;
-    -webkit-transform: translateY(-250%);
-            transform: translateY(-250%);
-    top: 44vmin;
-    left: 38vmin;
-  }
-  .santa {
-    width: 50vmin;
-    height: 50vmin;
-    position: absolute;
-    top: 70vmin;
-    left: 14vmin;
-  }
-  .gift {
-    top: 133vmin;
-    right: 66vmin;
-  }
-  @-webkit-keyframes jumping {
-    0% {
-      -webkit-transform: translateY(0%);
-              transform: translateY(0%);
-    }
-    20% {
-      -webkit-transform: translateY(400px);
-              transform: translateY(400px);
-    }
-    40% {
-      -webkit-transform: translateY(200px);
-              transform: translateY(200px);
-    }
-    60% {
-      -webkit-transform: translateY(530px);
-              transform: translateY(530px);
-    }
-    80% {
-      -webkit-transform: translateY(300px);
-              transform: translateY(300px);
-    }
-    100% {
-      -webkit-transform: translateY(530px) rotate(360deg);
-              transform: translateY(530px) rotate(360deg);
-      width: 35vmin;
-      height: 10vmin;
-    }
-  }
-  @keyframes jumping {
-    0% {
-      -webkit-transform: translateY(0%);
-              transform: translateY(0%);
-    }
-    20% {
-      -webkit-transform: translateY(400px);
-              transform: translateY(400px);
-    }
-    40% {
-      -webkit-transform: translateY(200px);
-              transform: translateY(200px);
-    }
-    60% {
-      -webkit-transform: translateY(530px);
-              transform: translateY(530px);
-    }
-    80% {
-      -webkit-transform: translateY(300px);
-              transform: translateY(300px);
-    }
-    100% {
-      -webkit-transform: translateY(530px) rotate(360deg);
-              transform: translateY(530px) rotate(360deg);
-      width: 35vmin;
-      height: 10vmin;
-    }
-  }
-  .lightrope-tree {
-    left: 55vmin;
-    top: 53.8vmin;
-  }
-  .lightrope-tree__item:nth-child(1) {
-    top: 48vmin;
-    left: -2vmin;
-  }
-  .lightrope-tree__item:nth-child(2) {
-    top: 48vmin;
-    left: 13vmin;
-  }
-  .lightrope-tree__item:nth-child(3) {
-    top: 31vmin;
-    left: 9vmin;
-  }
-  .lightrope-tree__item:nth-child(4) {
-    top: 25vmin;
-  }
-  .lightrope-tree__item:nth-child(5) {
-    top: 16vmin;
-    left: 4vmin;
-  }
-  .lightrope-tree__item:nth-child(6) {
-    top: 33vmin;
-    left: 0vmin;
-  }
-  .lightrope-tree__item:nth-child(7) {
-    top: 44vmin;
-  }
-  .lightrope-tree__item:nth-child(8) {
-    left: 9vmin;
-    top: 12vmin;
+  .background {
+    background: rgb(252, 243, 176);
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(252, 243, 176)), color-stop(39%, rgb(252, 243, 176)), color-stop(40%, rgb(115, 72, 27)), color-stop(42%, rgb(3, 3, 3)), color-stop(42%, rgb(115, 72, 27)), color-stop(46%, rgb(3, 3, 3)), color-stop(46%, rgb(115, 72, 27)), color-stop(50%, rgb(3, 3, 3)), color-stop(50%, rgb(115, 72, 27)), color-stop(55%, rgb(3, 3, 3)), color-stop(55%, rgb(115, 72, 27)), color-stop(59%, rgb(3, 3, 3)), color-stop(59%, rgb(115, 72, 27)), color-stop(64%, rgb(3, 3, 3)), color-stop(64%, rgb(115, 72, 27)), color-stop(69%, rgb(3, 3, 3)), color-stop(69%, rgb(115, 72, 27)), color-stop(75%, rgb(3, 3, 3)), color-stop(75%, rgb(115, 72, 27)), color-stop(80%, rgb(3, 3, 3)), color-stop(80%, rgb(115, 72, 27)), color-stop(89%, rgb(3, 3, 3)), color-stop(89%, rgb(115, 72, 27)), color-stop(95%, rgb(3, 3, 3)), color-stop(95%, rgb(115, 72, 27)), color-stop(10%, rgb(3, 3, 3)), to(rgb(115, 72, 27)));
+    background: linear-gradient(180deg, rgb(252, 243, 176) 0%, rgb(252, 243, 176) 39%, rgb(115, 72, 27) 40%, rgb(3, 3, 3) 42%, rgb(115, 72, 27) 42%, rgb(3, 3, 3) 46%, rgb(115, 72, 27) 46%, rgb(3, 3, 3) 50%, rgb(115, 72, 27) 50%, rgb(3, 3, 3) 55%, rgb(115, 72, 27) 55%, rgb(3, 3, 3) 59%, rgb(115, 72, 27) 59%, rgb(3, 3, 3) 64%, rgb(115, 72, 27) 64%, rgb(3, 3, 3) 69%, rgb(115, 72, 27) 69%, rgb(3, 3, 3) 75%, rgb(115, 72, 27) 75%, rgb(3, 3, 3) 80%, rgb(115, 72, 27) 80%, rgb(3, 3, 3) 89%, rgb(115, 72, 27) 89%, rgb(3, 3, 3) 95%, rgb(115, 72, 27) 95%, rgb(3, 3, 3) 10%, rgb(115, 72, 27) 100%);
   }
 }
