--- a/#source/calendar-style.scss
+++ b/#source/calendar-style.scss
@@ -190,14 +190,14 @@ $wave-3:#949494;
 .circle-1 {
    width: 80px;
    height: 80px;
-   top: 25em;
+   top: 48vmin;
    left:90px;
    z-index:20;
    box-shadow: 
       inset 3px -6px 1px $grey,
       inset 10px -20px 4px $wave-2;
    position:relative;
-   animation: snowmen 300ms 0.5s ease-in-out;
+   animation: snowmen 300ms 1s ease-in-out;
    animation-fill-mode: forwards;
 
       &::before {
@@ -210,7 +210,7 @@ $wave-3:#949494;
       left: 23px;
       border-radius: 50%;
       background-color: $color-6;
-      animation: snowmen 500ms 1s ease-in-out;
+      animation: snowmen 500ms 3s ease-in-out;
       animation-fill-mode: forwards;
    }
    &::after {
@@ -223,7 +223,7 @@ $wave-3:#949494;
       left: 43px;
       border-radius: 50%;
       background-color: $color-6;
-      animation: snowmen 500ms 1s ease-in-out;
+      animation: snowmen 2s 3s ease-in-out;
       animation-fill-mode: forwards;
    }
 
@@ -232,13 +232,13 @@ $wave-3:#949494;
    opacity:0;
    width: 120px;
    height: 120px;
-   top: 24em;
+   top: 46vmin;
    left:80px;
    z-index: 19;
    box-shadow: 
       inset -2px -5px 1px $grey,
       inset 15px -25px 4px $wave-2;
-      animation: snowmen 600ms 0.5s ease-in-out;
+      animation: snowmen 2s 2s ease-in-out;
       animation-fill-mode: forwards;
    &::before, 
    &::after {
@@ -253,7 +253,7 @@ $wave-3:#949494;
       width: 10px;
       height: 10px;
       left: 60px;
-      animation: snowmen 400ms 3s ease-in-out;
+      animation: snowmen 1s 3s ease-in-out;
       animation-fill-mode: forwards;
    }
    &::after {
@@ -261,7 +261,7 @@ $wave-3:#949494;
       width: 10px;
       height: 10px;
       left: 60px;
-      animation: snowmen 600ms 3s ease-in-out;
+      animation: snowmen 1s 4s ease-in-out;
       animation-fill-mode: forwards;
    }
 
@@ -269,20 +269,20 @@ $wave-3:#949494;
 .circle-3 {
    width: 160px;
    height: 140px;
-   top: 23em;
+   top: 44vmin;
    left:60px;
    z-index: 18;
    box-shadow: 
       inset -3px -10px 1px $grey,
       inset 14px -30px 4px $wave-2;
-   animation: snowmen 10ms 0.5s ease-in-out;
+   animation: snowmen 10ms 3s ease-in-out;
    animation-fill-mode: forwards;
 
    &::before, &::after {
       opacity:0;
       position: absolute;
       content: '';
-      animation: snowmen 300ms 4s ease-in-out;
+      animation: snowmen 2s 5s ease-in-out;
       animation-fill-mode: forwards;
    }
    
@@ -303,23 +303,7 @@ $wave-3:#949494;
       background: linear-gradient(128deg, rgba(116,59,16,0) 41%, rgba(70,35,10,1) 43%, rgba(0,0,0,1) 45%, rgba(93,47,13,1) 47%, rgba(116,59,16,0) 48%);
    }
 }
-.face {
-   position: relative;
-   z-index: 20;
-   &::before {
-      opacity:0;
-      content:'';
-      position: absolute;
-      top: 5em;
-      left: 120px;
-      width: 30px;
-      height: 30px;
-      border-bottom: 4px solid $green;
-      border-radius: 35%;
-      animation: snowmen 400ms 3s ease-in-out;
-      animation-fill-mode: forwards;
-   }
-}
+
 @keyframes snowmen {
    0% {
       opacity: 0;
@@ -335,94 +319,30 @@ $wave-3:#949494;
 .calendar {
    display: grid;
    width: 80%;
-   max-width: 900px;
-   margin: 10% auto 2rem auto;
-   grid-template-columns: repeat(3, 1fr);
+   max-width: 80%;
+   min-height: 100vh;
+   margin-top: 100px;
    grid-template-rows: auto;
-   grid-gap: 2em;
-   transform: translate3d(0px, 0px, 0px);
-   justify-content: center;
+   grid-gap: 1em;
+   grid-template-columns: repeat(5, 1fr);
    grid-template-areas:
-      " day12 day10 day8"
-      "day9 day24  day11"
-      ". day2 day13"
-      ". day18 day4"
-      "day20 day1 day7"
-      "day5 day14 day17"
-      "day16 day23 day6"
-      "day15 day21 day19"
-      "day25 day28 day31"
-      "day29 day30 day26"
-      "day22 day3 day27"
+      "day5 day17 day15 day6 day22"
+      "day23 day1  day24 day24 day20 "
+      "day25 day18 day24 day24 day30 "
+      "day7 day4 day13 day11 day21 "
+      "day28 day10 day2 day8 day31 "
+      "day14 day3 day29 day19 day12"
+      "day9 day27 day27 day16 day26"
       ;
-   
-   &__card {
-      min-width: 8rem;
-      min-height: 8rem;
-      perspective: 1000px;
-      border: 1px dotted black;
-   }
+   z-index:500;
+   padding: 60px 20px 30px 170px;
+   justify-content: center;
 }
-@media (min-width: 600px) {
-   .calendar {
-      display: grid;
-      width: 80%;
-      max-width: 80%;
-      min-height: 100vh;
-      grid-template-rows: auto;
-      grid-gap: 1em;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-areas:
-         " day12 day10 day8"
-         "day3 day24  day11"
-         "day22  day2 day13"
-         "day9 day18 day4"
-         "day20 day1 day7"
-         "day5 day14 day17"
-         "day16 day23 day6"
-         "day15 day21 day19"
-         "day25 day28 day31"
-         "day29 day30 day26"
-         ". day27 .";
-      z-index:500;
-      padding: 30px 40px 30px 170px;
-      justify-content: center;
-   }
-   .calendar__card {
-      width: 100%;
-      height: 100%;
-      perspective: 1000px;
-      border: 1px dotted black;
-   }
-}
-@media (min-width: 1024px) {
-   .calendar {
-      display: grid;
-      width: 80%;
-      max-width: 80%;
-      min-height: 100vh;
-      grid-template-rows: auto;
-      grid-gap: 1em;
-      grid-template-columns: repeat(5, 1fr);
-      grid-template-areas:
-         "day5 day17 day15 day6 day22"
-         "day23 day1  day24 day24 day20 "
-         "day25 day18 day24 day24 day30 "
-         "day7 day4 day13 day11 day21 "
-         "day28 day10 day2 day8 day31 "
-         "day14 day3 day29 day19 day12"
-         "day9 day27 day27 day16 day26"
-         ;
-      z-index:500;
-      padding: 60px 20px 30px 170px;
-      justify-content: center;
-   }
-   
-}
-
 
 .card {
    position:relative;
+   min-width: 8rem;
+   min-height: 8rem;
 }
    .card--1 {
       grid-area: day1;
@@ -593,5 +513,79 @@ $wave-3:#949494;
    left:36px;
    font-size: 18px;
    opacity: 0;
+   }
+}
+
+@media (min-width: 680px) and (max-width: 1024px) {
+   .calendar {
+      display: grid;
+      width: 80%;
+      max-width: 80%;
+      min-height: 100vh;
+      margin-top: 150px;
+      grid-template-rows: auto;
+      grid-gap: 1em;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-areas:
+         " day12 day10 day8"
+         "day3 day24  day11"
+         "day22  day2 day13"
+         "day9 day18 day4"
+         "day20 day1 day7"
+         "day5 day14 day17"
+         "day16 day23 day6"
+         "day15 day21 day19"
+         "day25 day28 day31"
+         "day29 day30 day26"
+         ". day27 .";
+      z-index:500;
+      padding: 30px 40px 30px 170px;
+      justify-content: center;
+   }
+   .calendar__card {
+      min-width: 8rem;
+      min-height: 8rem;
+      perspective: 1000px;
+      border: 1px dotted black;
+   }
+}
+@media (max-width:679px) {
+   .calendar {
+      display: grid;
+      width: 100%;
+      margin: 70% 5px 2rem 5px;
+      padding: 0 40px;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: auto;
+      grid-gap: 1em;
+      transform: translate3d(0px, 0px, 0px);
+      justify-content: center;
+      grid-template-areas:
+         "day12 day10 day8 day22"
+         "day9 day24  day11 day3"
+         "day29 day2 day13 day27"
+         "day30 day18 day4 day26"
+         "day20 day1 day7 day25"
+         "day5 day14 day17 day28"
+         "day16 day23 day6 day31"
+         "day15 day21 day19 ."
+         ;
+      
+      &__card {
+         min-width: 8rem;
+         min-height: 8rem;
+         perspective: 1000px;
+         border: 1px dotted black;
+      }
+   }
+   .content__snowmen {
+      position: fixed;
+      top: -27vmin;
+   }
+   .wave-1 {
+      top:21%;
+   }
+   .wave-2 {
+      top:32%;
    }
 }
