--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -92,17 +92,17 @@
     }
     100% {
       transform: translateY(400px) rotate(360deg);
-      width: 35vmin;
-      height: 10vmin;
+      width: 44vmin;
+      height: 25vmin;
     }
   }
 
   &::after {
   position:absolute;
   content:'Адвент-календарь';
-  top:5px;
+  top:10px;
   left:36px;
-  font-size: 18px;
+  font-size: 1em;
   opacity: 0;
   }
 }
@@ -798,30 +798,6 @@
     top: 0vmin;
     left: -3vmin;
   }
-  .buttons__home {
-    @keyframes jumping {
-      0% {
-        transform: translateY(0%);
-      }
-      20% {
-        transform: translateY(400px);
-      }
-      40% {
-        transform: translateY(200px);
-      }
-      60% {
-        transform: translateY(220px);
-      }
-      80% {
-        transform: translateY(300px);
-      }
-      100% {
-        transform: translateY(220px) rotate(360deg);
-        width: 35vmin;
-        height: 10vmin;
-      }
-    }
-}
 }
 @media (min-width: 992px) and (max-width: 1199px) and  (orientation:landscape) {
   .tree { 
