--- a/#source/calendar-style.scss
+++ b/#source/calendar-style.scss
@@ -555,24 +555,32 @@ $wave-3:#949494;
       width: 100%;
       margin: 70% 5px 2rem 5px;
       padding: 0 40px;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(2, 1fr);
       grid-template-rows: auto;
       grid-gap: 1em;
       transform: translate3d(0px, 0px, 0px);
       justify-content: center;
       grid-template-areas:
-         "day12 day10 day8 day22"
-         "day9 day24  day11 day3"
-         "day29 day2 day13 day27"
-         "day30 day18 day4 day26"
-         "day20 day1 day7 day25"
-         "day5 day14 day17 day28"
-         "day16 day23 day6 day31"
-         "day15 day21 day19 ."
+         "day12 day10"
+         "day8 day22"
+         "day9 day24"  
+         "day11 day3"
+         "day29 day2" 
+         "day13 day27"
+         "day30 day18" 
+         "day4 day26"
+         "day20 day1" 
+         "day7 day25"
+         "day5 day14" 
+         "day17 day28"
+         "day16 day23" 
+         "day6 day31"
+         "day15 day21" 
+         "day19 ."
          ;
       
       &__card {
-         min-width: 8rem;
+         min-width: 100%;
          min-height: 8rem;
          perspective: 1000px;
          border: 1px dotted black;
