--- a/css/index-style.css
+++ b/css/index-style.css
@@ -185,8 +185,28 @@ nav, footer, header {
     opacity: 5;
   }
 }
-
+@keyframes isVisible {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 5;
+  }
+}
 @-webkit-keyframes lights-fall {
+  0% {
+    -webkit-transform: translateY(-150vh);
+            transform: translateY(-150vh);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+@keyframes lights-fall {
   0% {
     -webkit-transform: translateY(-150vh);
             transform: translateY(-150vh);
@@ -263,8 +283,36 @@ nav, footer, header {
   100% {
     -webkit-transform: translateY(400px) rotate(360deg);
             transform: translateY(400px) rotate(360deg);
-    width: 44vmin;
-    height: 25vmin;
+    width: 35vmin;
+    height: 10vmin;
+  }
+}
+@keyframes jumping {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  20% {
+    -webkit-transform: translateY(400px);
+            transform: translateY(400px);
+  }
+  40% {
+    -webkit-transform: translateY(200px);
+            transform: translateY(200px);
+  }
+  60% {
+    -webkit-transform: translateY(400px);
+            transform: translateY(400px);
+  }
+  80% {
+    -webkit-transform: translateY(300px);
+            transform: translateY(300px);
+  }
+  100% {
+    -webkit-transform: translateY(400px) rotate(360deg);
+            transform: translateY(400px) rotate(360deg);
+    width: 35vmin;
+    height: 10vmin;
   }
 }
 .buttons__home::after {
@@ -1455,7 +1503,62 @@ nav, footer, header {
     top: 90vmin;
     right: 70vmin;
   }
-
+  @-webkit-keyframes jumping {
+    0% {
+      -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+    }
+    20% {
+      -webkit-transform: translateY(400px);
+              transform: translateY(400px);
+    }
+    40% {
+      -webkit-transform: translateY(200px);
+              transform: translateY(200px);
+    }
+    60% {
+      -webkit-transform: translateY(400px);
+              transform: translateY(400px);
+    }
+    80% {
+      -webkit-transform: translateY(300px);
+              transform: translateY(300px);
+    }
+    100% {
+      -webkit-transform: translateY(400px) rotate(360deg);
+              transform: translateY(400px) rotate(360deg);
+      width: 44vmin;
+      height: 25vmin;
+    }
+  }
+  @keyframes jumping {
+    0% {
+      -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+    }
+    20% {
+      -webkit-transform: translateY(400px);
+              transform: translateY(400px);
+    }
+    40% {
+      -webkit-transform: translateY(200px);
+              transform: translateY(200px);
+    }
+    60% {
+      -webkit-transform: translateY(400px);
+              transform: translateY(400px);
+    }
+    80% {
+      -webkit-transform: translateY(300px);
+              transform: translateY(300px);
+    }
+    100% {
+      -webkit-transform: translateY(400px) rotate(360deg);
+              transform: translateY(400px) rotate(360deg);
+      width: 44vmin;
+      height: 25vmin;
+    }
+  }
   .lightrope-tree {
     left: 56vmin;
     top: 30.8vmin;
